force-app/main/default/objects/FieldDetails__mdt/FieldDetails__mdt.object-meta.xml
<CustomObject>
    <label>Field Details</label>
    <pluralLabel>Field Details</pluralLabel>
</CustomObject>