force-app/main/default/objects/FieldDetails__mdt/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <metadataRelationshipControllingField>FieldDetails__mdt.ObjectAPIName__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Field_Details</relationshipLabel>
    <relationshipName>Field_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>