force-app/main/default/objects/FieldDetails__mdt/fields/ObjectDetails__c.field-meta.xml
<CustomField>
    <fullName>ObjectDetails__c</fullName>
    <label>Object Details</label>
    <referenceTo>ObjectDetails__mdt</referenceTo>
    <relationshipLabel>Field Details</relationshipLabel>
    <relationshipName>Field_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>